--- a/connectfour.css
+++ b/connectfour.css
@@ -5,7 +5,7 @@ h1{
     text-decoration: underline;
     font-family: 'IBM Plex Sans Condensed' ;
   }
-.grid{
+.board{
     display: grid; 
     width: auto;
     height: auto;
@@ -35,4 +35,15 @@ h1{
 .slot.clicked:hover{
     cursor: not-allowed;
     background-color: rgba(240, 100, 73, 0.5);
+}
+
+.player-one-piece
+{
+    
+    background-color: red;
+}
+
+.player-two-piece
+{
+    background-color: yellow;
 }
