--- a/connectfour.css
+++ b/connectfour.css
@@ -30,7 +30,7 @@ h1{
 .cell:not(.player-one-piece):hover
 {
     cursor: pointer;
-    background-color: red;
+    background-color: rgb(55, 0, 255);
 }
 
 
